fix z-index

--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -3,7 +3,7 @@
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
   position: relative;
-  top: -50px;
+  margin-top: -50px;
 }
 
 .page-footer__logo {
